checkbox for skip tip added, js to send post request created, WebKeys and Language properties updated

--- a/portlets/tip-of-the-day-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/tip-of-the-day-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -9,8 +9,9 @@ tof-previous=Previous
 tof-next=Next
 tof-dont-show=Don't show this any more
 tof-show-tips=Show Tips
+tof-skip-tip=Skip this tip next time
 tof-done=Done
-tof-display=Show me tips now
+tof-display=Show me all tips now
 tof-help=Help
 tof-switch=Show tips
 tof-preferences-saved=Your preferences were saved successfully
